# qt-notepad

./: .gitignore  CMakeLists.txt  README.md
include/: mainwindow.h
resources/: resources.qrc
src/: main.cpp
ui/: mainwindow.cpp  mainwindow.ui
